Minor UI fixes to ensure responsiveness on smaller devices.

--- a/PeerTutor/wwwroot/content/site.css
+++ b/PeerTutor/wwwroot/content/site.css
@@ -4,6 +4,9 @@
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+.nav {
+    z-index: 9999;
+}
 .modal-dialog {
     overflow-y: initial !important
 }
@@ -108,6 +111,7 @@ a:focus {
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
 }
 
 .navbar-btn {
@@ -170,7 +174,7 @@ tr:nth-child(even) {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     z-index: 999;
     background: #7386D5;
     color: #fff;
